--- a/apps/frontend/src/components/Footer.module.scss
+++ b/apps/frontend/src/components/Footer.module.scss
@@ -20,7 +20,7 @@
     padding:variables.$spacing;
     text-decoration: none;
     color: variables.$black;
-    opacity:0.6;
+    opacity:0.8;
     display:flex;
     align-items: center;
     gap: variables.$spacing;
