--- a/apps/frontend/src/components/Logo.module.scss
+++ b/apps/frontend/src/components/Logo.module.scss
@@ -1,3 +1,4 @@
 .logo {
     width:100px;
+    display: flex;
 }
