--- a/apps/frontend/src/global-styles/variables.module.scss
+++ b/apps/frontend/src/global-styles/variables.module.scss
@@ -1,5 +1,5 @@
 $white: #fff;
-$black: #334155;
+$black: #18191a;
 $black-translucent: #334155ad;
 $paper: #eff0eb;
 $paper-dark: #ddded8;
